--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'polls/master.css' %}">
     <link rel="stylesheet" href="{% static 'polls/nav-sidebar.css' %}">
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.7.1.min.js"> </script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="{% static 'polls/jquery.doubleScroll.js' %}"> </script>
     {% block additional_head %} {% endblock %}
     <title> {% block title %} Журнал оргтехники УГМС по ЛНР {% endblock %} </title>
