--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -10,6 +10,8 @@
 <h1> Вход в аккаунт </h1>
 {% endblock %}
 
+{% block main_nav %} {% endblock %}
+
 {% block content %}
 {% if form.errors %} 
 <p class="errornote"> Пожалуйста, введите корректные имя пользователя и пароль учётной записи. Оба поля могут быть чувствительны к регистру. </p> 
